kubernetes/apps/gha/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gha
  labels:
    # Couldn't find way around neeing privileged given docker needs it and podman needs user namespaces allowed on node itself
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
