kubernetes/apps/gha/templates/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gha
  namespace: gha
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
